2000-12-06  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump version to 2.49c.

2000-12-06  Akim Demaille  <akim@epita.fr>

	Version 2.49b.

2000-12-06  Akim Demaille  <akim@epita.fr>

	Stop playing with FDs in Autotest.

	* tests/atgeneral.m4 (AT_INIT): Set up FD 5.
	(AT_CHECK): Instead of using exec to globally change the FDs of
	`testsuite', enclose the body of the test into a
	`(..) >stdout 2>stderr'.
	In every case, when verbose, display the differences between
	expected and observed (stdout, stderr, exit status).
	Let `0' be the default for EXIT-STATUS.
	Support EXIT-STATUS == `ignore'.

2000-12-06  Akim Demaille  <akim@epita.fr>

	* tests/tools.at (autoconf: forbidden tokens): Adjust expected
	result.

2000-12-06  Akim Demaille  <akim@epita.fr>

	* man/config.guess.x: New file.
	* man/config.sub.x: New file.

2000-12-06  Akim Demaille  <akim@epita.fr>

	* tests/aclocal.m4 (AT_STATE_SAVE): Don't even try to preserve
	egrep error messages, AT_CHECK will find them.

2000-12-06  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Usual Tools) <awk>: `for' on
	arrays is nondeterministic across AWK implementations.
	* tests/tools.at (autoconf: forbidden tokens): Sort the error
	message to guarantee its uniqueness.

2000-12-06  Akim Demaille  <akim@epita.fr>

	The SunOS' egrep fails to process properly the `egrep' invocations
	of the test suite.

	* tests/aclocal.m4 (AC_STATE_SAVE): If egrep fails, remove the
	output file.
	* tests/atspecific.m4 (_AT_CHECK_AC_MACRO): Don't check `state-*'
	if the files are not present.

	* m4sugar.m4 (m4_join): Rename as...
	(m4_smash): this.
	* tests/aclocal.m4 (join): Move as...
	* m4sugar.m4 (m4_flatten): this.
	* autoconf.sh (trace.m4): Rename m4_smash as m4_flatten.

2000-12-06  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (task trace): s/m4/$M4/.
	* autoheader.sh: When loading trace.sh, catch errors and exit with
	a decent error message.
	* tests/tools.at: Be sure to test autoconf --trace before